Replace deprecated new Boolean with Boolean.valueOf
Change-Id: I645ffa2061e7abf4c91aee9b54901cda6170a325
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>